assets/css/style.css
/* ============================================================ *\
*         Mary Elenius Final Portfolio General Stylesheet         *
*      https://coolors.co/8cd5cf-fafbfb-4f565d-d5d8d7-000000     *
*                         05/02/2023                             *
\* -----------------------------------------------------------  */

/*                     Table of Contents:                       *\

* UNIVERSAL & VARIABLES
  ## Universal Selectors
  ## Color Variables

* ELEMENTS
  ## HTML
  ## Body

* FLEXBOX

* TYPOGRAPHY 
  ## Font Family
  ## Text wrap
  ## Code blocks
  ## Header Tags

* COMPONENTS
 ## Header
 ## Glitch Shape
 ## Buttons
 ## Footer

* HELPERS
 ## Margin Auto

* MEDIA QUERIES
 ## 	Mobile Devices <= 600px
 ## Tablet Devices > 600px
 ## Desktop Devices > 992px
 ## Large Desktop Devices > 1200px

/* ============================================================ *\
*                     Universal & Variables                      *
\* -----------------------------------------------------------  */

/* --------------      Universal Selectors       -------------- */

/*      Universal- removes padding & margin & set box-sizing    */
*,
*:before,
*:after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

/*       Universal- removes text decoration from li and a      */
li,
a {
  text-decoration: none;
}

/* ----------------      Color Variables       ---------------- */

/*       Color variables for easy selection throughout CSS      */
:root {
  --light-blue: #8cd5cfff;
  --dark-blue: #121629;
  --white: #fafbfbff;
  --dark-gray: #4f565dff;
  --light-gray: #d5d8d7ff;
  --black: #000000ff;
}

/* ============================================================ *\
*                           Elements                             *
\* -----------------------------------------------------------  */

/* html */

html {
  margin: 0;
  /* height: 100vh; */
  color: var(--light-blue) !important;
  /* todo- add text shadow */
  background-color: #121629;
}

/* ---------------------       Body       --------------------- */

/*          Element Selector to apply background color          */
body {
  background-image: url("../images/background-image.svg");
  background-repeat: repeat;
  background-size: cover;
  margin: 0;
  width: 100vw;
  /* height: 100vh; */
  aspect-ratio: auto;
}

/* A-hrefs */
a {
  color: var(--light-blue) !important;
}

/* ============================================================ *\
*                           Flexbox                              *
\* -----------------------------------------------------------  */

/*                Class selector to apply flexbox                */
.flexbox {
  display: flex !important;
}

/*         Class selector to apply column flex direction         */
.flexColumn {
  flex-direction: column;
}

/*          Class selector to apply row flex direction           */
.flexRow {
  flex-direction: row;
}

.flexNoWrap {
  flex-wrap: nowrap;
}

/* ============================================================ *\
*                          Typography                            *
\* -----------------------------------------------------------  */

/* -----------------       Font Family       ------------------ */

/* ------------------       Text Wrap       ------------------- */

/*              Class selector to apply text wrap               */
.text-wrap {
  /* Since CSS 2.1 */
  white-space: pre-wrap;
  /* Mozilla, since 1999 */
  white-space: -moz-pre-wrap;
  /* Opera 4-6 */
  white-space: -pre-wrap;
  /* Opera 7 */
  white-space: -o-pre-wrap;
  /* Internet Explorer 5 */
  word-wrap: break-word;
}

.no-wrap {
  /* Since CSS 2.1 */
  white-space: nowrap;
  /* Mozilla, since 1999 */
  white-space: -moz-no-wrap;
  /* Opera 4-6 */
  white-space: -no-wrap;
  /* Opera 7 */
  white-space: -o-no-wrap;
  /* Internet Explorer 5 */
  word-wrap: normal;
}

/* Heading Sizes */

h3 {
  font-size: 1rem !important;
  color: var(--black);
}

h4 {
  font-size: 0.9rem !important;
  color: var(--black);
  font-weight: 500;
}

/* ============================================================ *\
*                          Components                            *
\* -----------------------------------------------------------  */

/* -------------------       Header       --------------------- */

/*        Coding Panda        */
.panda-coding {
  position: absolute;
  width: 200px;
  top: 30px;
  right: 30px;
}

/*  Name */
/* Relocated to assets/css/glitch-name.css */

/* ------------------       Sections       -------------------- */

/* Mind the Mess modal */

#messy-panda {
  position: relative;
  width: 100px;
  height: 100px;
  border-radius: 30px;
  right: 7%;
  top: 9px;
}

#modal-container {
  display: flex;
  justify-items: center;
  align-self: center;
  align-items: center;
  align-content: center;
  justify-content: center;
}

.modal .modal-content {
  padding: 0px !important;
  position: relative;
}

.modal-content h5 {
  position: relative;
  width: 250px;
  font-size: 1.3rem;
  top: 9px;
  right: 13px;
}

#modal-text {
  position: relative;
  width: 250px;
  right: 13px;
  bottom: -10px;
  font-size: 0.8rem;
}

#modal1 {
  background-image: url(../images/mind-the-mess-container.svg);
  background-repeat: no-repeat;
  background-color: transparent;
  max-height: 300px;
  min-height: 300px;
  min-width: 300px;
  max-width: 300px;
  position: absolute;
  text-align: center;
  padding: 0px !important;
  overflow: hidden;
}

.modal-footer {
  position: absolute;
  right: 20px;
  bottom: 5px;
  background-color: transparent !important;
}

/*  Technologies */
#technologies {
  background-image: url("../images/technology-container.svg");
  background-repeat: repeat-y;
  min-height: 180px;
  max-height: 180px;
  position: absolute;
  top: 13%;
  right: 3%;
}

/* ~~~~~~ Column container (sets height to contain ul) ~~~~~ */
#column-container {
  position: relative;
  height: 20px;
  width: 215px;
  top: 16px;
  right: -33px;
}

/* ~~~~~~ Tab container ~~~~~~ */
#tab-container {
  display: flex !important;
  flex-direction: column !important;
  overflow-x: visible;
  overflow-y: visible;
  background: transparent;
  height: 20px;
}

/* ~~~~~~ Fixes line height for the line items ~~~~~~ */
.user-style-tab {
  height: 20px !important;
  line-height: 20px !important;
  background: rgba(255, 255, 255, 0.1);
  margin: 1%;
  border: 0.1px solid var(--light-blue);
}

.user-style-tab a {
  text-transform: capitalize;
}

.user-style-tab:hover {
  background: rgba(0, 0, 0, 0.1);
}

/* Frameworks and Technologies */
#tech1 {
  background-image: url("../images/technology-modal.svg");
  background-repeat: no-repeat;
  position: absolute;
  min-height: 180px;
  max-height: 180px;
  left: -200px;
  bottom: -55px;
  z-index: 10;
}

#tech1 h4 {
  position: relative;
  left: 10px;
  top: -3px;
}

/* Databases */
#tech2 {
  background-image: url("../images/technology-modal-2.svg");
  background-repeat: no-repeat;
  position: absolute;
  min-height: 180px;
  max-height: 180px;
}
/* Languages */
#tech3 {
  background-image: url("../images/technology-modal-3.svg");
  background-repeat: no-repeat;
  position: absolute;
  min-height: 180px;
  max-height: 180px;
}
/* Other Tools */
#tech4 {
  background-image: url("../images/technology-modal-4.svg");
  background-repeat: no-repeat;
  position: absolute;
  min-height: 180px;
  max-height: 180px;
}

/* Work */
#work {
  background-image: url("../images/work-container.svg");
  background-repeat: no-repeat;
  min-height: 30%;
  position: relative;
  left: 28%;
  top: 50%;
}

/* About Me */
#about-me {
  background-image: url("../images/about-me-container.svg");
  background-repeat: no-repeat;
  min-height: 30%;
  position: absolute;
  left: 5%;
  top: 10%;
}

/* Contact */
#contact {
  background-image: url("../images/contact-container.svg");
  background-repeat: no-repeat;
  min-height: 30%;
  position: absolute;
  right: 8%;
  top: 55%;
}
/* Resume */
#resume {
  background-image: url("../images/resume-container.svg");
  background-repeat: no-repeat;
  min-height: 30%;
  width: auto;
  position: absolute;
  right: 7%;
  bottom: 2%;
  display: none;
}
/* Extra */
#extra {
  background-image: url("../images/extra-container.svg");
  background-repeat: no-repeat;
  min-height: 40%;
  position: absolute;
  left: 8%;
  bottom: 5%;
}
/* -------------------       Footer       --------------------- */

/* -------------------       Button       --------------------- */

/* ============================================================ *\
*                           Helpers                              *
\* -----------------------------------------------------------  */

.hidden {
  display: none !important;
}

.row {
  margin-bottom: 0px !important;
}

/* ============================================================ *\
*      Media Queries (Alphabetical by screen size break          *
\* -----------------------------------------------------------  */

/* ----------       Mobile Devices <= 600px S       ------------ */

@media only screen and (max-width: 599px) {
  #about-me {
    top: 3%;
    left: 17%;
  }

  #about-me h3 {
    position: absolute;
    margin-left: 2%;
    margin-top: 2.9%;
  }

  #contact {
    top: 110%;
    right: 0%;
  }

  #extra {
    top: 100%;
  }

  h3 {
    font-size: 1rem !important;
  }

  html {
    height: auto;
  }

  p {
    font-size: 0.75rem !important;
  }

  .panda-coding {
    position: absolute;
    top: 5%;
    right: 5%;
    width: 30%;
  }

  #resume {
    top: 115%;
  }

  #resume-download-container h3 {
    color: var(--light-blue);
    position: absolute;
    left: 50%;
  }

  #resume-download-container p {
    position: absolute;
    top: 54%;
    right: 22%;
  }

  #resume-download-icon {
    position: absolute;
    right: 26%;
    top: 40%;
  }

  .scanlines {
    height: 100vh;
    width: 100vw;
  }

  section#contact div#section-content {
    position: absolute;
    top: 31%;
    left: 20%;
  }

  section#contact div#section-content h3 {
    position: absolute;
    margin: 0;
    top: -20%;
    left: -30%;
    color: var(--light-blue);
  }

  #tab-container {
    width: 90%;
    margin: 0;
  }

  .tabs {
    background: rgba(0, 0, 0, 0.1);
  }

  #technologies {
    top: 40%;
    left: 20%;
  }

  .textEffect {
    /* same size as h1 */
    font-size: 3rem;
  }

  .user-style-tab {
    line-height: 150% !important;
  }

  #work {
    top: 70%;
  }

  #work h3 {
    margin-left: 50%;
    margin-top: 14%;
    color: var(--light-blue);
  }
}

/* ----------       Tablet Devices > 600px M      ------------- */

@media only screen and (max-width: 600px) {
  .medium {
  }
}

/* ----------       Desktop Devices > 992px L     ------------- */

@media only screen and (max-width: 992px) {
  .large {
  }
}

/* ------       Large Desktop Devices > 1200px  XL      ------ */

@media only screen and (max-width: 1200px) {
  .xl {
  }
}

/* ============================================================ *\
*                        Example Heading                         *
\* -----------------------------------------------------------  */

/* -------------       Example Sub-Heading       --------------- */

